# network-router-rs

./: Cargo.toml  README.md  config.json  config.yaml  rustfmt.toml
.github/workflows/: build.yml  clippy.yml
src/: README.md  config.rs  lib.rs  session.rs  strategy.rs  tcp.rs  udp.rs
src/protocol/: mod.rs  tcp.rs  udp.rs
src/rest/: handlers.rs  mod.rs  resources.rs
src/session/: mod.rs  rules.rs  strategy.rs
src/storage/: mod.rs  rules.rs
src/web/: common.rs  error.rs  form.rs  handlers.rs  http.rs  json.rs  mod.rs  resources.rs  responses.rs
src/web/json/: handlers.rs  mod.rs  resources.rs
templates/: all_routes.html  list_rules.html  one_rule.html
tests/: json_api.rs  test_json.rs  test_json_get.rs  test_udp_broadcast.rs  udp_broadcast.rs
tests/common/: mod.rs
