# Copyright 2019 Mats Kindahl
#
# Licensed under the Apache License, Version 2.0 (the "License"); you
# may not use this file except in compliance with the License.  You
# may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
# implied.  See the License for the specific language governing
# permissions and limitations under the License.

[package]
name = "router"
version = "0.1.0"
authors = ["Mats Kindahl <mats.kindahl@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
tokio-util = { version = "~0.2", features = ["full"] }
log = "~0.4"
bytes = "~0.4"
env_logger = { version = "0.5", default-features = false }
futures = "~0.3"
clap = "3.0.0-beta.2"
serde_json = "~1.0"
serde = { version = "~1.0", features = ["derive"] }

[lib]
name = "router"
path = "src/lib.rs"

[[bin]]
name = "network-router"

[[bin]]
name = "check-config"
