# Copyright 2019-21 Mats Kindahl
#
# Licensed under the Apache License, Version 2.0 (the "License"); you
# may not use this file except in compliance with the License.  You
# may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
# implied.  See the License for the specific language governing
# permissions and limitations under the License.

[package]
name = "router"
version = "0.1.0"
authors = ["Mats Kindahl <mats.kindahl@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "~1.0"
clap = "~2.33"
env_logger = { version = "0.5", default-features = false }
futures = "~0.3"
hyper = { version = "~0.14", features = ["full"] }
log = "~0.4"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
tokio = { version = "~1.3", features = ["full"] }
tokio-util = { version = "~0.6", features = ["full"] }
async-trait = "~0.1"
http = "~0.2"
warp = "~0.3"

[lib]
name = "router"
path = "src/lib.rs"

[[bin]]
name = "network-router"

[[bin]]
name = "check-config"
